Fixed one line text vertical align

--- a/css/lists.less
+++ b/css/lists.less
@@ -32,7 +32,7 @@
 .nt-object-item-title-block {
   display: inline-block;
   width: 100%;
-  padding-top: 13px;
+  line-height: @list-item-height;
 }
 
 .nt-filter-checkbox,
