--- a/css/navigation.less
+++ b/css/navigation.less
@@ -25,8 +25,8 @@
 }
 
 .nt-nav-tab-link {
-  padding-top: 20px;
   display: inline-block;
+  line-height: @navigation-bar-height;
   width: @navigation-bar-height;
   height: @navigation-bar-height;
   background: @navigation-bar-tab-color;
