--- a/css/styles.less
+++ b/css/styles.less
@@ -9,7 +9,7 @@ body {
   overflow: hidden;
 }
 
-@navigation-bar-height: 60px;
+@navigation-bar-height: 55px;
 @navigation-bar-color: #DDDDDD;
 @navigation-bar-tab-color: #DDDDDD;
 @navigation-bar-active-tab-color: #AAAADD;
